--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -843,8 +843,8 @@ a {
       font-size: 1rem; } }
 
 .hero {
-  background: url("../img/hero3.jpg"), -webkit-linear-gradient(10deg, #20392b, #7f99be), no-repeat #7f99be scroll;
-  background: url("../img/hero3.jpg"), linear-gradient(10deg, #20392b, #7f99be), no-repeat #7f99be scroll;
+  background: url("../img/hero3.jpg"), -webkit-linear-gradient(0deg, #040004, #7a7a7a), no-repeat #7a7a7a scroll;
+  background: url("../img/hero3.jpg"), linear-gradient(0deg, #040004, #7a7a7a), no-repeat #7a7a7a scroll;
   background-color: #324766;
   background-position: center;
   background-repeat: no-repeat;
@@ -876,7 +876,7 @@ a {
         @media only screen and (min-width: 768px) {
           .hero .hero-inner .hero-copy h2 {
             font-size: 3em; } }
-  .hero .quick-sign-up-bar .InputAddOn {
+  .hero #mc_embed_signup_scroll {
     display: -webkit-box;
     display: -moz-box;
     display: box;
@@ -884,58 +884,82 @@ a {
     display: -moz-flex;
     display: -ms-flexbox;
     display: flex;
-    width: 300px;
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    box-orient: vertical;
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    box-direction: normal;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-direction: column;
+    width: 250px;
     margin: 0 auto; }
     @media only screen and (min-width: 768px) {
-      .hero .quick-sign-up-bar .InputAddOn {
-        width: 350px; } }
-  .hero .quick-sign-up-bar .InputAddOn-field {
-    background-color: rgba(0, 0, 0, 0.4);
-    margin: 0;
-    -webkit-box-flex: 1;
-    -moz-box-flex: 1;
-    box-flex: 1;
-    -webkit-flex: 1;
-    -moz-flex: 1;
-    -ms-flex: 1;
-    flex: 1; }
-  .hero .quick-sign-up-bar .InputAddOn-item {
-    font-size: 0.75em;
-    border-radius: 0.25em;
-    background: #FA023C;
-    color: white;
-    text-transform: uppercase; }
-    .hero .quick-sign-up-bar .InputAddOn-item:hover {
-      background: white;
-      color: red;
-      -webkit-transition: all 0.25s ease-in-out;
-      -moz-transition: all 0.25s ease-in-out;
-      transition: all 0.25s ease-in-out; }
-    @media only screen and (min-width: 768px) {
-      .hero .quick-sign-up-bar .InputAddOn-item {
-        padding: 0.5em 0.75em;
-        font-size: 1em; } }
-  .hero .quick-sign-up-bar .InputAddOn-field,
-  .hero .quick-sign-up-bar .InputAddOn-item {
-    border: 1px solid rgba(147, 128, 108, 0.25);
-    padding: 0.5em 0.75em; }
-  .hero .quick-sign-up-bar .InputAddOn-field:first-child,
-  .hero .quick-sign-up-bar .InputAddOn-item:first-child {
-    border-radius: 2px 0 0 2px; }
-  .hero .quick-sign-up-bar .InputAddOn-field:last-child,
-  .hero .quick-sign-up-bar .InputAddOn-item:last-child {
-    border-radius: 0 2px 2px 0; }
-  .hero .quick-sign-up-bar p {
-    text-align: center;
-    color: #7a7a7a;
-    margin: 1em 1em 0 1em; }
-  .hero .quick-sign-up-bar .emailForm-messages {
+      .hero #mc_embed_signup_scroll {
+        -webkit-box-orient: horizontal;
+        -moz-box-orient: horizontal;
+        box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -moz-box-direction: normal;
+        box-direction: normal;
+        -webkit-flex-direction: row;
+        -moz-flex-direction: row;
+        flex-direction: row;
+        -ms-flex-direction: row;
+        width: 450px; } }
+    .hero #mc_embed_signup_scroll .mc-field-group {
+      -webkit-box-flex: 3;
+      -moz-box-flex: 3;
+      box-flex: 3;
+      -webkit-flex: 3;
+      -moz-flex: 3;
+      -ms-flex: 3;
+      flex: 3;
+      margin: 0; }
+      .hero #mc_embed_signup_scroll .mc-field-group input {
+        background-color: rgba(0, 0, 0, 0.4);
+        border-radius: 0px; }
+      @media only screen and (min-width: 768px) {
+        .hero #mc_embed_signup_scroll .mc-field-group {
+          font-size: 1em; } }
+    .hero #mc_embed_signup_scroll #mc-embedded-subscribe {
+      border-radius: 0.25em;
+      background: #FA023C;
+      color: white;
+      text-transform: uppercase;
+      border-radius: 0 2px 2px 0;
+      border: 1px solid rgba(147, 128, 108, 0.25);
+      padding: 0.5em 0.75em;
+      margin: 0 auto; }
+      .hero #mc_embed_signup_scroll #mc-embedded-subscribe:hover {
+        background: white;
+        color: red;
+        -webkit-transition: all 0.25s ease-in-out;
+        -moz-transition: all 0.25s ease-in-out;
+        transition: all 0.25s ease-in-out; }
+      @media only screen and (min-width: 768px) {
+        .hero #mc_embed_signup_scroll #mc-embedded-subscribe {
+          font-size: 1em; } }
+  .hero .email-name {
+    -webkit-box-flex: 2;
+    -moz-box-flex: 2;
+    box-flex: 2;
+    -webkit-flex: 2;
+    -moz-flex: 2;
+    -ms-flex: 2;
+    flex: 2; }
+    .hero .email-name input {
+      border-radius: 2px 0 0 2px;
+      background-color: rgba(0, 0, 0, 0.4); }
+  .hero .emailForm-messages {
     margin: 1em auto;
     max-width: 300px; }
     @media only screen and (min-width: 768px) {
-      .hero .quick-sign-up-bar .emailForm-messages {
+      .hero .emailForm-messages {
         max-width: 350px; } }
-    .hero .quick-sign-up-bar .emailForm-messages p {
+    .hero .emailForm-messages p {
       font-size: 1em;
       font-weight: 300;
       color: #fff;
@@ -946,7 +970,7 @@ a {
       opacity: 0;
       max-height: 0em;
       margin: 0; }
-    .hero .quick-sign-up-bar .emailForm-messages .error {
+    .hero .emailForm-messages .error {
       padding: 0.5em;
       max-height: 100%;
       opacity: 1;
@@ -954,7 +978,7 @@ a {
       -webkit-transition: all 0.3s ease;
       -moz-transition: all 0.3s ease;
       transition: all 0.3s ease; }
-    .hero .quick-sign-up-bar .emailForm-messages .success {
+    .hero .emailForm-messages .success {
       padding: 0.5em;
       max-height: 100%;
       opacity: 1;
@@ -962,6 +986,10 @@ a {
       -webkit-transition: all 0.3s ease;
       -moz-transition: all 0.3s ease;
       transition: all 0.3s ease; }
+  .hero .announcement {
+    text-align: center;
+    color: #fff;
+    margin: 1em 1em 0 1em; }
 
 .what {
   text-align: center;
